feat(build): migrate project to Bazel
Replace the Buildr/Rake build with a Bazel 9.1.1 module-mode build that uses bazel-depgen for third-party Java dependencies. Add explicit BUILD targets for the core library, QA helpers, fixtures, release tooling, formatting, buildifier checks, coverage enforcement, and CI.

Add the managed IntelliJ project view and Bazel-based Maven Central release scripts, then document the new contributor and release workflows. Apply Palantir Java Format across the Java tree so the automated formatter gate starts from a clean baseline.